TestCases/LLVMTests/SyntaxErrorTests/tests/test54.c
#include <stdio.h>

int main() {
    const int x = 2;
    x--;
    return 0;
}